# neLenkin_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic-docker.ini  alembic.ini  auth.json.example  connect_db.py  constants.py  contributions-based.sql  docker-compose.prod.yml  docker-compose.yml  handlers.py  helpers.py  main.py  membership-view.sql  membership.py  menu.py  minimal_dump.sql  models.py  notifications.py  output.sql  pyproject.toml  requirements.txt  settings.py
.github/workflows/: image.yml
alembic/: env.py
alembic/versions/: 05a1bcfb8c89_initial_commit.py  (+22 more)
aoc/: fetch_leaderboard.py
courses/: course_handlers.py  course_helpers.py
etc/: crontab  nelenkin_bot.service
handlers/: admin_commands.py  boosty_handlers.py  button_handlers.py  handlers.py  leetcode_mock_handlers.py  menu.py  patreon_handlers.py
intro/: intro_handler.py
leetcode_pairs/: .gitignore  calculate_participation.py  generate_graph.py  leetcode_notifications.py
membership/: boosty_handlers.py  fetch_boosty_patrons.py  fetch_patrons.py  membership.py  patreon_handlers.py
monitoring/: calculate_metrics_and_report.py  docker-compose.monitoring.yml  push_monitoring.py  update_users_in_db.py  zoom_attendance.py
notifications/: notifications.py  notifications_helpers.py
patreon/: fetch_boosty_patrons.py  fetch_patrons.py
scripts/: example_users.txt  insert_members_by_activity.py  load_users_to_db.py  nelenkin_bot_backup.sh  refresh_patreon_token.py  test_aoc_report.py
users/: email_contact_handler.py  location_handler.py
(+4 files in other folders)
