[project]
name = "nelenkin-bot"
version = "0.1.0"
description = "A telegram bot that support neLenkin Club"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.11",
    "pyboostyapi>=1.0.6",
    "python-telegram-bot[job-queue]>=22.7",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
